--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -1,13 +1,7 @@
 Import ('env')
 e = env.Clone()
 
-e.UseLibs('vmap gred')
-
-e.Prepend(LIBS=["vmap_renderer"])
-e.Library('vmap_renderer',\
-  Split ("""
-    vmap_renderer.cpp
-  """))
+e.UseLibs('vmap gred img_io')
 
 e.Program("vmap_render.cpp")
 e.Program("vmap_mmb_filter.cpp")
