experimental: VMAP layer in mapsoft_mapview

--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -3,7 +3,7 @@ Import ('env')
 SConscript("images/SConscript")
 
 e=env.Clone()
-e.UseLibs('gred img_io geo_io mp srtm')
+e.UseLibs('gred vmap img_io geo_io mp srtm')
 
 e.Library("viewer", Split ("""
 	mapview.cpp
@@ -35,6 +35,7 @@ e.Library("viewer", Split ("""
 	panels/wpts_panel.cpp
 	panels/trks_panel.cpp
 	panels/maps_panel.cpp
+	panels/vmap_panel.cpp
         """))
 e.Prepend(LIBS=["viewer"])
 e.Program("mapsoft_mapview.cpp")
