--- a/vector/data/pics/SConscript
+++ b/vector/data/pics/SConscript
@@ -9,7 +9,7 @@ env1 = env.Clone()
 pics = Split("""
   avt kladb cross cerkov pam ohotn:88 bash:77 shaht:57 razv dom trig trig_hr kan
   ldp per per1a per1b per2a per2b per3a per3b pernk kladb pupyr yama skala
-  bol_l:63 bol_h:62 redk vyr_n vyr_o ledn zd ur_vod por vdp pesch
+  bol_l:63 bol_h:62 redk vyr_n vyr_o ledn sand zd ur_vod por vdp pesch
 """)
 
 #### Method for pic 2 png mystery conversion
