geo_refs.h: move from geo to geo_io, add --trk_brd option

--- a/core/geo_io/SConscript
+++ b/core/geo_io/SConscript
@@ -15,6 +15,7 @@ e.Library('geo_io', \
     io_xml.cpp
     io_zip.cpp
     geofig.cpp
+    geo_refs.cpp
      """))
 e=env.Clone()
 e.UseLibs('geo_io')
