--- a/misc/forest/SConscript
+++ b/misc/forest/SConscript
@@ -1,8 +1,6 @@
 Import('env')
-e=env.Clone()
-e.UseLibs('geo_io srtm shp')
 
-map (lambda(f): e.Program(f+'.cpp'),\
+map (lambda(f): env.Program(f+'.cpp'),\
   Split("""
     forest_preview
     forest_nom
