--- a/misc/image_a/SConscript
+++ b/misc/image_a/SConscript
@@ -1,9 +1,6 @@
 Import('env')
-e=env.Clone()
 
-e.UseLibs('loaders')
-
-map (lambda(f): e.Program(f+'.cpp'),\
+map (lambda(f): env.Program(f+'.cpp'),\
   Split("""
     image_a
     """))
