--- a/misc/mp_bboxes/SConscript
+++ b/misc/mp_bboxes/SConscript
@@ -1,8 +1,6 @@
 Import('env')
-e=env.Clone()
-e.UseLibs('mp utils')
 
-e.Program(["mp_bboxes.cpp"])
-e.Program('mp_bboxes2.cpp')
+env.Program(["mp_bboxes.cpp"])
+env.Program('mp_bboxes2.cpp')
 
 
