--- a/misc/tim/SConscript
+++ b/misc/tim/SConscript
@@ -1,9 +1,6 @@
 Import('env')
-e=env.Clone()
 
-e.UseLibs('geo_io srtm')
-
-map (lambda(f): e.Program(f+'.cpp'),\
+map (lambda(f): env.Program(f+'.cpp'),\
   Split("""
     mapsoft_measure
     mapsoft_mark
