--- a/tests/2d_cache/SConscript
+++ b/tests/2d_cache/SConscript
@@ -1,7 +1,4 @@
 Import('env')
-e=env.Clone()
 
-e.UseLibs('2d')
-
-e.Program("cache_test.cpp")
-e.Program("sizecache_test.cpp")
+env.Program("cache_test.cpp")
+env.Program("sizecache_test.cpp")
