--- a/vector/data/SConscript
+++ b/vector/data/SConscript
@@ -3,7 +3,6 @@ Import ('env')
 import os,sys
 
 e = env.Clone()
-e.UseLibs('vmap')
 
 # patch for cygwin
 exeSuffix = ''
@@ -57,6 +56,7 @@ def Cnf2CM(env, name):
      ../vmap3/vmap_render $$tmpvmap $$tmppng;\
      pngtopnm $$tmppng | pnmscale 0.5 |\
         pnmcolormap -sort 256 > %s.cmap.pnm; \
+     rm -f -- \"$$tmpvmap\" \"$$tmppng\"\
      trap - EXIT" % (name, name), chdir = 1)
    env.Depends(cmd, '../../programs/mapsoft_vmap'+exeSuffix )
    env.Depends(cmd, '../vmap3/vmap_render'+exeSuffix )
