core/opts: string representation

--- a/core/SConscript
+++ b/core/SConscript
@@ -24,7 +24,7 @@ if os.getenv('PKG_CONFIG_PATH'):
 ##################################
 ### mapsoft library
 
-env.UseLibs('libxml-2.0 libzip libproj libgif libjpeg libpng libtiff-4 libcurl zlib yaml-0.1 shp')
+env.UseLibs('libxml-2.0 libzip libproj libgif libjpeg libpng libtiff-4 libcurl zlib yaml-0.1 shp jansson')
 env.UseLibs('glibmm-2.4 gtkmm-2.4 gthread-2.0')
 env.UseLibs('cairomm-1.0 pixman-1 freetype2 libusb-1.0')
 
