--- a/core/SConscript
+++ b/core/SConscript
@@ -21,17 +21,18 @@ if os.getenv('PKG_CONFIG_PATH'):
 
 
 
-##################################
-### mapsoft library
+##################################################
+## build mapsoft library
 
 env.UseLibs('libxml-2.0 libzip libproj libgif libjpeg libpng libtiff-4 libcurl zlib yaml-0.1 shp jansson')
 env.UseLibs('glibmm-2.4 gtkmm-2.4 gthread-2.0')
 env.UseLibs('cairomm-1.0 pixman-1 freetype2 libusb-1.0')
 
-
 # all source files
 objects = Split ("""
   err/err.cpp
+  opts/opts.cpp
+  getopt/getopt.cpp
 
   2d/point_int.cpp
   2d/rect.cpp
@@ -164,6 +165,8 @@ objects = Split ("""
   vmap/vmap_legend.cpp
 """)
 
+env.StaticLibrary('mapsoft', objects)
+
 ##################################################
 ## strange programs inside the core folder
 programs=Split("""
@@ -174,38 +177,58 @@ programs=Split("""
   ocad/ocad_test.cpp
 """)
 
+map(env.Program, programs)
+
 ##################################################
 ## simple tests: fail if error code is not zero
+
 simple_tests=Split("""
   err/err.test.cpp
   opts/opts.test.cpp
 """)
 
-##################################################
-## build the library
-env.StaticLibrary('mapsoft', objects)
-
-##################################################
-## build programs
-map(env.Program, programs)
-
-##################################################
-## build and run simple tests
 import os
-def builder_unit_test(target, source, env):
-    app = str(source[0].abspath)
-    if os.spawnl(os.P_WAIT, app, app)==0:
-        open(str(target[0]),'w').write("PASSED\n")
+def builder_test_simple(target, source, env):
+    prg = str(source[0].abspath)
+    if os.spawnl(os.P_WAIT, prg, prg)==0:
+      open(str(target[0]),'w').write("PASSED\n")
     else:
-        return 1
+      return 1
 
 # Create a builder for tests
-env.Append(BUILDERS = {'Test' : Builder(action = builder_unit_test)})
+env.Append(BUILDERS = {'TestSimple' : Builder(action = builder_test_simple)})
 
-def build_and_run(p):
-  a = env.Program(p)
-  env.Test(str(a[0]) + ".passed", a)
-#  env.Alias(, str(a[0])+".passed")
+def build_and_run_simple(src):
+  prg = env.Program(src)
+  res = str(prg[0]) + ".passed"
+  env.TestSimple(res, prg)
 
-map(build_and_run, simple_tests)
+map(build_and_run_simple, simple_tests)
+
+##################################################
+## script tests: build a program, then run a script
+
+script_tests=Split("""
+  getopt/getopt.test.cpp
+""")
+
+def builder_test_script(target, source, env):
+    prg = str(source[0].abspath)
+    scr = str(source[1].abspath)
+    if os.spawnl(os.P_WAIT, scr, scr)==0:
+      open(str(target[0]),'w').write("PASSED\n")
+    else:
+      return 1
+
+# Create a builder for tests
+env.Append(BUILDERS = {'TestScript' : Builder(action = builder_test_script)})
+
+def build_and_run_script(src):
+  prg = env.Program(src)
+  res = str(prg[0]) + ".passed"
+  scr = str(prg[0]) + ".script"
+  env.TestScript(res, [prg, scr])
+
+map(build_and_run_script, script_tests)
+
 ##################################################
