cleanup cache.h/sizecache.h, make core/cache folder

--- a/core/SConscript
+++ b/core/SConscript
@@ -189,6 +189,8 @@ simple_tests=Split("""
   err/err.test.cpp
   opts/opts.test.cpp
   tiles/tiles.test.cpp
+  cache/cache.test.cpp
+  cache/sizecache.test.cpp
 """)
 
 import os
