more docs; ozi library (not finished)

--- a/core/SConscript
+++ b/core/SConscript
@@ -193,6 +193,7 @@ simple_tests=Split("""
   tiles/tiles.test.cpp
   cache/cache.test.cpp
   cache/sizecache.test.cpp
+  ozi/ozi.test.cpp
 """)
 
 import os
