--- a/vector/data/pics/SConscript
+++ b/vector/data/pics/SConscript
@@ -10,6 +10,7 @@ pics = Split("""
   avt kladb cross cerkov pam ohotn:88 bash:77 shaht:57 razv dom trig trig_hr kan
   ldp per per1a per1b per2a per2b per3a per3b pernk kladb pupyr yama skala
   bol_l:63 bol_h:62 redk vyr_n vyr_o ledn sand zd ur_vod por vdp pesch
+  rossip1 rossip2 sand_ov camp:66
 """)
 
 #### Method for pic 2 png mystery conversion
