move convs_gtiles to programs/, add it to the installation

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -14,6 +14,7 @@ progs =  Split("""
     convs_pt2pt
     convs_map2pt
     convs_nom
+    convs_gtiles
     mapsoft_vmap
     """)
 
@@ -29,6 +30,7 @@ env.Install(env.bindir, Split("""
   convs_pt2pt
   convs_map2pt
   convs_nom
+  convs_gtiles
 """))
 
 env.SymLink("mapsoft_vmap", "vmap_copy", env.bindir)
