programs: do not build convs_gtiles (problems with boost/geometry in Altlinux)

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -14,9 +14,10 @@ progs =  Split("""
     convs_pt2pt
     convs_map2pt
     convs_nom
-    convs_gtiles
     mapsoft_vmap
     """)
+
+#    convs_gtiles
 
 for p in progs:
   env.Program(p + '.cpp')
